# ME-intern-project

./: .dockerignore  .env.example  .gitignore  DockerFile  Dockerfile  Dockerfile.app  Dockerfile.tests  README.md  alembic.ini  app.sh  celerybeat-schedule.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 05aa27a251ae_typo.py  27269a682ba5_da.py  4e744da5c61d_notify.py  715dfd6b4332_add_actions.py  7501fcd18775_f.py  96ee59f607c7_init.py  b0f79fe8f4c9_tablename.py  b20fbeb19485_add_quizzes_questions_results.py  be04e71adfb2_id.py  bfa2055adcc2_results.py  e9ea2ee3b315_id.py  f042a2e1a70d_typo1.py
app/: main.py
app/core/: config.py  fastapi_config.py  logger.py
app/db/: db_connect.py  models.py  redis_utils.py
app/repository/: analytics.py  auth.py  auth_repository.py  companies.py  company_actions.py  export_data.py  notifications_repo.py  questions.py  quizzes.py  score.py  user_actions.py  users.py  users_repository.py
app/routers/: analytics.py  auth.py  companies.py  company_actions.py  dependencies.py  export_data.py  healthschecker.py  questions.py  quizzes.py  scores.py  user_actions.py  users.py
app/schemas/: action_schemas.py  analytic_schemas.py  company_schemas.py  question_schemas.py  quiz_schemas.py  quiz_workflow_schemas.py  token_schemas.py  user_schemas.py  validation_schemas.py
app/services/: action_services.py  analytics.py  app_services.py  auth.py  auth_services.py  companies.py  company_actions.py  db_checks.py  exceptions.py  export_data.py  healthchecker_funcs.py  healthchecker_services.py  pagination.py  questions.py  quizzes.py  result_services.py  scores.py  user_actions.py  (+2 more)
tests/: company_crud_test.py  conftest.py  test-scores.py  test_actions.py  test_analytics.py  test_auth_route.py  test_company_actions.py  test_company_route.py  test_export_data.py  test_heathchecker_route.py  test_main.py  test_questions.py  test_quizzes.py  test_user_actions.py  user_crud_test.py
(+4 files in other folders)
