[tool.poetry]
name = "me-intern-project"
version = "0.1.0"
description = ""
authors = ["maxafanasiev <80445276+maxafanasiev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "me_intern_project"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
redis = "^5.0.0"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
fastapi-cache2 = "^0.2.1"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
